1999-02-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el: Use insert throughout instead of java-print wrapper.
	(ensure-directory): New function.
	(with-protocol-file, java-print-interface-phase-to-file): Use it.
	(java-print-class-phase-to-file): Use it.
	(java-print-classes): Create swarm directory.
	(the-CREATABLE-protocol-p): New function.
	(CREATABLE-p): Use it.
	(removed-method-p): New function.
	(method-list): New function.  Use it.
	(java-print-methods-in-phase): Use it.
	(*objc-to-java-type-alist*): notify_t and long doubles are freaky.
	(java-print-method): Concatenate method keys together into single
	Java method name. Upcase second and after keys.
	(removed-method-p): Also reject getDisplayName, setDisplayName,
	getTypeName, copy, and remove.
	(method-list): Use expanded method list.
	(java-print-argument): Avoid use of "class" as a variable name.
	(freaky-message): New function.
	(java-type-for-objc-type): Use it.
	(removed-method-p): Avoid raiseEvent: msg :...
	(java-print-classes): Don't print stubs for CREATABLE protocol.

1999-02-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el: Rewrite.  Stubs mostly compile now.  Two
	significant conceptual change: interfaces are generated
	for all phases of classes (prefixed with i_), and abstract
	classes are generated for when a protocol is not tagged CREATABLE.

1999-02-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el: Use eval-and-compile to set load-path from
	BUILDDIR.  require protocol instead of loading it.

1999-02-24  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* java-stub-new.el: New java stub generator. 
	(java-make-interface): Convert module symbol to string.
	(java-make-interface-setting): Likewise.
	(java-make-class): Likewise.

1999-02-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el: Load protocol.el from $SWARMSRCDIR/etc/protocol.el.
	Remove buffer arguments throughout, depending instead on